--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="css/index.css">
+        <link rel="stylesheet" type="text/css" href="css/style.css">
         <script type="text/javascript">
             function setup() {
                 setInterval( loadTime, 50 )
             }
             function loadTime() {
                 var time = new Date( Date.now() )
-                document.getElementById( "hours" ).innerHTML = time.getHours() + ":" + time.getMinutes()
-                document.getElementById( "seconds" ).innerHTML = time.getSeconds() + "" + Math.floor(time.getMilliseconds()/100) 
+                var hours = String.valueOf( time.getHours() ).padStart( 2, "0" )
+                var minutes = String.valueOf( time.getMinutes() ).padStart( 2, "0" )
+                var seconds = time.getSeconds()*10 + Math.floor(time.getMilliseconds()/100)
+                var secondsString = String.valueOf( seconds ).padStart( 3, "0" )
+                document.getElementById( "hours" ).innerHTML = hours + ":" + minutes
+                document.getElementById( "seconds" ).innerHTML = secondsString
             }
         </script>
     </head>
